--- a/src/styles/element/index.scss
+++ b/src/styles/element/index.scss
@@ -1,9 +1,9 @@
 $--colors: (
   "primary": (
-    "base": green,
+    "base": #409eff,
   ),
   "success": (
-    "base": #21ba45,
+    "base": #67c23a,
   ),
   "warning": (
     "base": #f2711c,
