--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,3 +23,11 @@ code {
   background-color: var(--ep-color-primary-light-9);
   color: var(--ep-color-primary);
 }
+
+.container {
+  padding: 2px;
+}
+
+.bg-white {
+  background-color: #fff;
+}
